---
source: compiler/src/compiler.rs
expression: "compile([[\"let\".into(), \"f\".into(),\n                            [\"fn\".into(), [].into(),\n                                        [\"if\".into(), 1.0.into(), 2.0.into(), 3.0.into(),\n                                                    4.0.into(), 5.0.into()].into()].into()].into()]).await"
---
jump 36
float64 1
branch 20
float64 3
branch a
float64 5
return
float64 4
return
float64 2
return
close 3 0 0
